[package]
name = "kraken"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14", features = ["full"]}
tokio = {version="1", features = ["full"]}
reqwest = {version="0.11", features= ["json"] }
futures = "0.3"
serde = {version="1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13"
configparser = "3.0.0"
chrono = "0.4"
mysql = {version = "21.0"}